# SPART

./: .gitignore  AUTHORS.md  CSPART.coderprj  README.md  TIMEIT_VECTORIZED_FUNCTIONS_COMPARISON.m  pyproject.toml  setup.py
PySPART/: PySPART.py  PySPART_example.py  README.md  __init__.py  example_robot_import.py  example_robot_import_matlabCheck.m
PySPART/validation_and_debug/: CODEGEN_VALIDATION_MATLAB.m  example_robot_import_matlabCheck.m
SPARTpy/: README.md  SPARTpy.py  SPARTpy_example.py  __init__.py  urdf2robot.py
SPARTpy/_c_src/: README.txt
SPARTpy/tests/: test_urdf2robot.py
SPARTpy/urdf/: floating_7dof_manipulator.urdf
SPARTpy/validation_and_debug/: CODEGEN_VALIDATION_MATLAB.m  DEFINE_CODEGEN_VARIABLE_TYPES.m
URDF_models/: CSPART.coderprj  ChaserRobot.urdf  fixed_planar_4dof_manipulator.urdf  floating_7dof_manipulator.urdf  floating_planar_4dof_manipulator.urdf  simulator_light.slxc
URDF_models/plot_robot/: parse_urdf_base_inertia.m  plotPlanarRobot.m  plot_floating_3d_chaser_robot.m  plot_floating_planar_4dof_manipulator.m
src/ODE/: SPART_SPACEROBOT_ODE_C.m
src/Simulink_library/: SPART_Lib.slx
src/attitude_transformations/: Euler_DCM_casadi.m  quat_DCM_casadi.m
src/kinematics_dynamics/: Accelerations.coderprj  Accelerations_C.m  Accelerations_casadi.m  Accelerations_mex.mexa64  CIM.coderprj  CIM_vectorized.m  DiffKinematics.coderprj  DiffKinematics.m  DiffKinematics_C.m  DiffKinematics_casadi.m  DiffKinematics_mex.mexa64  DiffKinematics_vectorized.m  FD.coderprj  FD.m  FD_C.m  FD_casadi.m  FD_mex.mexa64  GIM.coderprj  GIM_vectorized.m  (+38 more)
(+341 files in other folders)
